# usage-trace

./: .gitignore  AGENTS.md  CHANGELOG.md  README-CN.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: codex-find.md  usage-trace.md
.codex-plugin/: plugin.json
.cursor-plugin/: marketplace.json  plugin.json
docs/: claude-code-agent.md  skill-install.md
docs/superpowers/plans/: 2026-07-03-codex-find.md  2026-07-16-p1-treesitter-index.md  2026-07-17-p2-ua-report.md
docs/superpowers/specs/: 2026-07-03-codex-find-design.md  2026-07-16-p1-treesitter-index-design.md  2026-07-17-p2-ua-report-design.md  2026-07-22-p3-multiplatform-packaging-design.md  2026-07-22-p4-multilang-design.md
plugins/usage-trace/: README.md
plugins/usage-trace/.claude-plugin/: plugin.json
plugins/usage-trace/.codex-plugin/: plugin.json
plugins/usage-trace/.cursor-plugin/: plugin.json
plugins/usage-trace/skills/usage-trace/: SKILL.md
profiles/: csharp-ef.yml  csharp-generic.yml  java-generic.yml  java-spring.yml  python-generic.yml  python-sqlalchemy.yml
scripts/: install-claude-agent.sh  install-skill.sh  install.sh  sync-plugin-copies.sh
scripts/hooks/: install-hooks.sh  pre-commit
skills/usage-trace/: SKILL.md
src/: codex_find.py  common.py  discover.py  graph.py  index.py  parsing.py  render.py  tables.py  trace.py  understand_rules.py  usage_trace.py
templates/: report.html.tmpl
tests/: conftest.py  test_agent_def.py  test_cli.py  test_common.py  test_discover.py  test_e2e.py  test_graph.py  test_index.py  test_install_scripts.py  test_p4_multilang.py  test_parsing.py  test_plugin.py  test_profile_java.py  test_render.py  test_scaffold.py  test_skill_def.py  test_tables.py  test_trace.py  test_understand_rules.py
tests/fixtures/csharp-ef/src/Controllers/: OrderController.cs
tests/fixtures/csharp-ef/src/Data/: Order.cs  OrderRepository.cs
tests/fixtures/csharp-ef/src/Services/: OrderService.cs
tests/fixtures/java-spring/: pom.xml
tests/fixtures/python-sqlalchemy/app/api/: order_api.py
tests/fixtures/python-sqlalchemy/app/models/: order.py
(+7 files in other folders)
