[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "usage-trace"
version = "0.1.0"
description = "Trace keyword usage, call chains, and database tables in Java/Spring projects."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.6",
]

[project.scripts]
usage-trace = "usage_trace:main"
codex-find = "usage_trace:main"

[tool.setuptools]
py-modules = ["usage_trace", "codex_find", "common", "discover", "graph", "render", "tables", "trace", "understand_rules"]

[tool.setuptools.package-dir]
"" = "src"
